Further developments upon UI, added more ViewModels and setup Instructor View with entire command list.

--- a/App.StudentManagement/Maui.StudentManagement/AppShell.xaml
+++ b/App.StudentManagement/Maui.StudentManagement/AppShell.xaml
@@ -15,4 +15,12 @@
         Title="Student"
         ContentTemplate="{DataTemplate local2:StudentView}"
         Route="Student" />
+    <ShellContent
+        Title="Instructor"
+        ContentTemplate="{DataTemplate local2:InstructorView}"
+        Route="Instructor" />
+    <ShellContent
+        Title="Student modification and creation"
+        ContentTemplate="{DataTemplate local2:PersonDetailView}"
+        Route="StudentModifier" />
 </Shell>
