--- a/App.StudentManagement/Maui.StudentManagement/Views/InstructorView.xaml
+++ b/App.StudentManagement/Maui.StudentManagement/Views/InstructorView.xaml
@@ -1,20 +1,29 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MAUI.LearningManagement.Views.InstructorView"
-             Title="InstructorView">
-    <VerticalStackLayout>
-        <Label 
-            Text="INSTRUCTOR VIEW"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-        <Button 
-            Text="Add Enrollment"
-            Clicked="AddEnrollmentClick"
-            />
-        <Button
-            Text="Cancel"
-            Clicked="CancelClicked"
-            />
-    </VerticalStackLayout>
+             x:Class="Maui.StudentManagement.Views.InstructorView">
+    <ContentPage.Content>
+        <Grid>
+            <ListView x:Name="ButtonListView"
+                      HorizontalOptions="Center"
+                      VerticalOptions="Center">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid HorizontalOptions="Center">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+
+                                <Button Grid.Row="0" Grid.Column="0" Text="{Binding Text}" Command="{Binding ClickedCommand}" WidthRequest="500" HeightRequest="30" Margin="0,0,0,10"/>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
+    </ContentPage.Content>
 </ContentPage>
