--- a/App.StudentManagement/Maui.StudentManagement/Views/PersonDetailView.xaml
+++ b/App.StudentManagement/Maui.StudentManagement/Views/PersonDetailView.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MAUI.LearningManagement.Views.PersonDetailView"
+             x:Class="Maui.StudentManagement.Views.PersonDetailView"
              Title="PersonDetailView">
     <VerticalStackLayout>
         <Label 
