Made alterations to InstructorView and InstructorViewViewModel to support MVVM

--- a/App.StudentManagement/Maui.StudentManagement/Views/InstructorView.xaml
+++ b/App.StudentManagement/Maui.StudentManagement/Views/InstructorView.xaml
@@ -4,8 +4,9 @@
     <ContentPage.Content>
         <Grid>
             <ListView x:Name="ButtonListView"
-                      HorizontalOptions="Center"
-                      VerticalOptions="Center">
+              HorizontalOptions="Center"
+              VerticalOptions="Center"
+              ItemsSource="{Binding ButtonModels}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
