Added student listing and search functionality, added course creation functionality.

--- a/App.StudentManagement/Maui.StudentManagement/AppShell.xaml
+++ b/App.StudentManagement/Maui.StudentManagement/AppShell.xaml
@@ -23,4 +23,12 @@
         Title="Student modification and creation"
         ContentTemplate="{DataTemplate local2:PersonDetailView}"
         Route="StudentModifier" />
+    <ShellContent
+        Title="Course modification and creation"
+        ContentTemplate="{DataTemplate local2:CourseDetailView}"
+        Route="CourseModifier" />
+    <ShellContent
+        Title="Student List"
+        ContentTemplate="{DataTemplate local2:StudentListView}"
+        Route="StudentList" />
 </Shell>
