--- a/App.StudentManagement/Maui.StudentManagement/Views/CourseDetailView.xaml
+++ b/App.StudentManagement/Maui.StudentManagement/Views/CourseDetailView.xaml
@@ -25,6 +25,6 @@
         <Button
             Text="Ok"
             Clicked="OkClick"
-            Width ="200"/>
+            WidthRequest ="200"/>
     </VerticalStackLayout>
 </ContentPage>
