--- a/App.StudentManagement/Maui.StudentManagement/Views/InstructorView.xaml
+++ b/App.StudentManagement/Maui.StudentManagement/Views/InstructorView.xaml
@@ -1,5 +1,6 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodels="clr-namespace:Maui.StudentManagement.ViewModels"
              x:Class="Maui.StudentManagement.Views.InstructorView">
     <ContentPage.Content>
         <Grid>
