--- a/App.StudentManagement/Maui.StudentManagement/Views/CourseDetailView.xaml
+++ b/App.StudentManagement/Maui.StudentManagement/Views/CourseDetailView.xaml
@@ -4,24 +4,14 @@
              x:Class="Maui.StudentManagement.Views.CourseDetailView"
              Title="CourseDetailView">
     <VerticalStackLayout>
-        <Label 
-            Text="Name"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-        <Entry Text="{Binding Path=Name, Mode=TwoWay}"></Entry>
+        <Label Text="Name" VerticalOptions="Center" HorizontalOptions="Center" />
+        <Entry Text="{Binding Path=Course.Name, Mode=TwoWay}"></Entry>
+        <Label Text="Code" VerticalOptions="Center" HorizontalOptions="Center" />
+        <Entry Text="{Binding Path=Course.Code, Mode=TwoWay}"></Entry>
+        <Label Text="Description" VerticalOptions="Center" HorizontalOptions="Center" />
+        <Entry Text="{Binding Path=Course.Description, Mode=TwoWay}"></Entry>
+        <Button Text="Ok" Clicked="OkClick" WidthRequest="200" />
 
-        <Label 
-            Text="Code"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-        <Entry Text="{Binding Path=Code, Mode=TwoWay}"></Entry>
-
-        <Label 
-            Text="Description"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-        <Entry Text="{Binding Path=Description, Mode=TwoWay}"></Entry>
-        
         <Button
             Text="Ok"
             Clicked="OkClick"
